# model_optimizer

./: .gitignore  .gitmodules  Makefile  README.md  model_optimizer.code-workspace  pyproject.toml  pytest.ini  requirements.thor.txt  requirements.txt  setup.py
Dockerfile/: dockerfile.anyverse  dockerfile.thor  dockerfile.x86  install_pi05.sh  requirements_pi05.txt  uninstall_uv.sh
config/: build_cfg.py  data_tube_seg.yaml  expert_build_cfg.py  llm_build_cfg.py  quant_cfg.py  vit_build_cfg.py
config/build_configs/: denoise_step_build_cfg.py  embed_prefix_build_cfg.py  expert_build_cfg.py  llm_build_cfg.py  pi05_whole_build_cfg.py  vit_build_cfg.py
config/quant/: action_quant_fp8_cfg.py  action_quant_nvfp4_cfg.py  denoise_quant_fp8_cfg.py  denoise_quant_fp8_kv.py  denoise_quant_fp8_nvfp4_mix.py  denoise_quant_nvfp4_fp8_mix_cfg.py  embed_prefix_quant_fp8_cfg.py  embed_prefix_quant_nvfp4_cfg.py  llm_quant_cfg.py  quant_cfg.py  (+8 more)
datasets/: download_yolo.py
docs/: Architecture.md  QandA.md  cli.md  dead_code_analysis.md  eval.md  infer_server.md  pi05.md  pi05_deploy.md  pi05_quantize.md  proxy.md  quant_flow.md  quantize_analysis.md  quantize_ptq_compare.md  torch_onnx_export.md  web_ui.md  yolo.md
examples/: run_demo.py  run_yolo.py
requirements/: README.md  requirements-base.txt  requirements-dev.txt  requirements-docker.txt  requirements-pi05.txt
scripts/: build_yolo.sh  env_init.sh  install.sh  test.sh  yolo_convert.py
src/: parent.py
tests/: conftest.py  print_yolo_pt_onnx.py  scope_datasets.py  test_compare.py  test_log.py  test_webui_cleanup.py
(+360 files in other folders)
