[build-system]
requires = ["setuptools>=65", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

# 包配置以 setup.py 为准，此处仅作工具配置
[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "e2e: End-to-end tests",
    "e2e_slow: Slow E2E tests",
    "e2e_gpu: E2E tests requiring GPU",
]
