[build-system]
requires = ["setuptools>=65", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

# PEP 621：新版 setuptools 要求 [project] 含 version 或将其列入 dynamic（与 setup.py 中元数据并存时需全部标为 dynamic）
[project]
name = "model_optimizer"
dynamic = [
    "version",
    "description",
    "readme",
    "license",
    "authors",
    "classifiers",
    "scripts",
]
requires-python = ">=3.10,<3.13"

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "e2e: End-to-end tests",
    "e2e_slow: Slow E2E tests",
    "e2e_gpu: E2E tests requiring GPU",
]
